--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,62 @@
-h2 {
-    color: green;
+@import url('https://fonts.googleapis.com/css?family=Gochi+Hand|Gudea&display=swap');
+
+body {
+    font-family:"Cudea", "Geneva", sans-serif;
 }
+
+#contentMain{
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+hr{
+    margin-left: 10px;
+    margin-right: 30px;
+}
+
+header{
+    display: flex;
+    justify-content: center;
+    min-height: 80px;
+    text-align: center;
+    position: relative;
+    background-color: black;
+    border-radius: 20px;
+}
+
+h1{
+    color: lightblue;
+}
+#myPic{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 160px;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5)
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+    min-height: 80px;
+    text-align: center;
+    position: relative;
+    background-color: black;
+    border-radius: 20px;
+    color: lightblue;
+    flex-direction: column;
+}
+
+#copyright{
+    font-size: 0.9em;
+    margin-top: 6px;
+}
+
+#lastUpdate{
+    color: yellow;
+    font-size: 0.7em;
+    margin-top: 8px;
+}
+
