--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,11 @@ body {
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 5rem;
 }
 
 hr{
-    margin-left: 10px;
+    margin-left: 20px;
     margin-right: 30px;
 }
 
@@ -21,13 +22,18 @@ header{
     min-height: 80px;
     text-align: center;
     position: relative;
-    background-color: black;
+    background-color: #001Ca0;
     border-radius: 20px;
 }
 
 h1{
-    color: lightblue;
+    color: #F0EDD5;
 }
+
+h2{
+    margin-left: 20px;
+}
+
 #myPic{
     position: absolute;
     top: 15px;
@@ -43,9 +49,9 @@ footer{
     min-height: 80px;
     text-align: center;
     position: relative;
-    background-color: black;
+    background-color: #001Ca0;
     border-radius: 20px;
-    color: lightblue;
+    color: #F0EDD5;
     flex-direction: column;
 }
 
@@ -60,3 +66,14 @@ footer{
     margin-top: 8px;
 }
 
+#refSpan{
+    color: white;
+    background-color: transparent;
+    text-decoration: underline;
+}
+
+a{
+    color: black;
+    background-color: transparent;
+    text-decoration: underline;
+}
