--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 
 body {
     font-family:"Cudea", "Geneva", sans-serif;
+    max-width: 900px;
+    margin: auto;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #contentMain{
@@ -35,6 +39,8 @@ h2{
 }
 
 #myPic{
+    max-width: 180px;
+    max-height: 230px;
     position: absolute;
     top: 15px;
     right: 15px;
