--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ h2{
 }
 
 #myPic{
+    position: absolute;
+    width: auto ;
+    max-width: 100% ;
+    height: auto ;
     top: 15px;
     right: 15px;
     width: 160px;
