--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Gochi+Hand|Gudea&display=swap');
 
+@media only screen and (min-width: 1000px) {
+	#myPic {
+		width: 25%;
+	}
+}
+
 body {
     font-family:"Cudea", "Geneva", sans-serif;
     
