--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Gochi+Hand|Gudea&display=swap');
 
 @media only screen and (min-width: 1000px) {
-	#myPic {
+	.myPic {
 		width: 25%;
 	}
 }
@@ -41,7 +41,7 @@ h2{
     margin-left: 20px;
 }
 
-#myPic{
+.myPic{
     position: absolute;
     width: auto ;
     max-width: 100% ;
