--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,9 @@ h2{
 }
 
 .myPic{
-    position: absolute;
-    width: auto ;
-    max-width: 100% ;
+    width: 200px ;
     height: auto ;
-    top: 15px;
-    right: 15px;
+    float: right;
     width: 160px;
     border-radius: 12px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5)
