--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,8 @@ h2{
 .myPic{
     width: 200px ;
     height: auto ;
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5)
 }
 
 footer{
