--- a/lesson4/css/medium.css
+++ b/lesson4/css/medium.css
@@ -37,7 +37,7 @@
     }
     
     .navigation li:hover {
-      background-color: #008FDB;
+      background-color: #007122;
       color: #f7f4e7;
       border-radius: 5px;
       box-shadow: 5px 5px 5px black;
