--- a/lesson5/css/large.css
+++ b/lesson5/css/large.css
@@ -1,5 +1,12 @@
 @media only screen and (min-width: 1200px) {
 
+  header{
+
+  }
+  header h1 {
+    font-size: 2.5em;
+  }
+
   nav{
       font-size: 20px;
   }
@@ -7,12 +14,14 @@
   header {
     -webkit-text-stroke-width: 2px;
   }
+
+  .article h3{
+    font-size: 2rem;
+  }
+
   div{
     font-size: 1.3em;
   }
   
-  h1 {
-    font-size: 2.5em;
-    margin-top: 0px;
-  }
+  
 }  
