--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -16,6 +16,10 @@ header {
   font-size: 18px;
 }
 
+header h1{
+  margin: 10px 10px 10px 0;
+}
+
 #active {
     border-radius: 5px;
     text-decoration: underline;
@@ -90,12 +94,15 @@ main{
   height: max-content;
 }
 
+.Preston{
+  text-align: center;
+}
+
 .prestonHeading{
   text-align: center;
   font-size: 30px;
   margin: 10px;
 }
-
 
 .heroBox{
   position: relative;
@@ -128,13 +135,14 @@ main{
 
 .article{
   display: flex;
-    flex-direction: column;
-    padding: 15px;
-    margin: 30px 0 5px 0;
+  flex-direction: column;
+  padding: 15px;
+  margin: 30px 0 5px 0;
 }
 
 .article h3{
   order: 1;
+  text-align: center;
 }
 
 .articlePic{
@@ -150,28 +158,65 @@ main{
 .contactsRow{
   display: grid;
   grid-template-columns: 1fr 1fr;
+  margin-bottom: 30px;
 }
 
 .map{
   grid-column: 1 / 3;
   grid-row: 2;
   max-width: 80%;
-  padding: 20px;
-  margin: 0 auto 0 auto;
+  margin: 0 auto 10px auto;
+  border-radius: 10px;
 }
 
 .mapPic{
   grid-column: 1 / 3;
   grid-row: 2;
-  max-width: 90%;
+  width: 350px;;
+  max-width: 100%;
   padding: 5px;
-  margin: 0 auto 0 auto;
+  margin: auto auto;
+  padding: 0;
+  border-radius: 10px;
 }
 
 .contacts{
   grid-column: 1 / 3;
   grid-row: 1;
   padding: 25px;
+  text-align: center;
+}
+
+.contacts p{
+  font-size: 15px;
+}
+
+.fa {
+  padding: 15px;
+  font-size: 20px;
+  width: 20px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-skype {
+  background: #00aff0;
+  color: white;
+}
+
+.fa:hover {
+  opacity: 0.7;
 }
 
 footer{
