--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -106,6 +106,11 @@ main{
   height: max-content;
 }
 
+.headline{
+  padding: 5px;
+  text-align: center;
+}
+
 .gallery{
   display: grid;
   grid-template-columns: 1fr;
@@ -118,7 +123,10 @@ main{
   padding: 0;
 }
 
-
+figcaption {
+  padding: 5px;
+  text-align: center;
+}
 
 .imgGallery {
   width: 100%;
