--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -211,8 +211,9 @@ footer{
 }
 
 #lastUpdate{
-    font-size: 0.8em;
+    font-size: 0.9rem;
     margin-top: 8px;
+    color: yellow;
 }
 
 #refSpan{
