--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -153,7 +153,7 @@ form span.options {
 
 #comments {
   height: 200px;
-  width: 500px;
+  width: auto;
   display: flex;
   flex-direction: column;
 }
