--- a/lesson11/css/preston/styles.css
+++ b/lesson11/css/preston/styles.css
@@ -47,7 +47,9 @@ nav{
     border: 3px solid #0A3282;
     background-color: #7EA9FF;
 }
-
+.forecast p {
+    color: black;
+  }
 .article{
       background-color: #7EA9FF;
 }
