--- a/lesson11/css/sodasprings/styles.css
+++ b/lesson11/css/sodasprings/styles.css
@@ -52,6 +52,11 @@ nav{
     color: black;
 }
 
+.events{
+    background-color: #7EA9FF;
+    border: 3px solid #0A3282;
+  }
+
 .article{
       background-color: #7EA9FF;
 }
