--- a/lesson11/css/fishhaven/styles.css
+++ b/lesson11/css/fishhaven/styles.css
@@ -60,6 +60,11 @@ nav{
     box-shadow: 0 0 30px black;
   }
 
+  .events{
+    background-color: #7EA9FF;
+    border: 3px solid #0A3282;
+  }
+
 .map{
     border: #0A3282 solid 3px;
     box-shadow: 0 0 30px black;
