--- a/lesson11/css/sodasprings/medium.css
+++ b/lesson11/css/sodasprings/medium.css
@@ -87,6 +87,14 @@
   padding: 0 1rem 1rem;
 }
 
+.events{
+  max-width: 60%;
+  margin: auto;
+  margin-bottom: 60px;
+  margin-top: 40px;
+  border-radius: 5px; 
+  box-shadow: 0 0 20px gray;
+}
   .summaryBox{
     position: absolute;
     top: 15px;
