--- a/scoots/css/small.css
+++ b/scoots/css/small.css
@@ -105,32 +105,16 @@ main{
   text-align: center;
 }
 
-
-.rentalHome{
-  gap: 3px;
-  padding: 15px 0 15px 0;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.rentalHome section{
-  border: solid 2px;
-}
-
-.rentalHome h2 {
-  text-align: center;
-  font-size: 15px;
-}
-
-.rentalHome p{
-  font-size: 13px;
-  padding: 5px;
-}
 .rental{
   gap: 3px;
   padding: 15px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
+}
+
+.rental img{
+  display: block;
+  width: 100%;
 }
 
 .rental section{
@@ -206,29 +190,6 @@ main{
   margin-bottom: 30px;
 }
 
-.map{
-  display:block;
-  grid-column: 1 / 3;
-  grid-row: 2;
-  max-width: 80%;
-  margin: 0 auto 10px auto;
-  border-radius: 10px;
-  border: #0A3282 solid 3px;
-    box-shadow: 0 0 30px black;
-}
-
-.mapPic{
-  display:block;
-  grid-column: 1 / 3;
-  grid-row: 2;
-  width: 350px;;
-  max-width: 100%;
-  padding: 5px;
-  margin: auto auto;
-  padding: 0;
-  border-radius: 10px;
-}
-
 .contacts{
   grid-column: 1 / 3;
   grid-row: 1;
@@ -240,8 +201,79 @@ main{
   font-size: 15px;
 }
 
-.socialPic{
-  padding: 10px;
+form label.first input, form label.first select {
+  display: block;
+  font-size: 0.8rem;
+  border-radius: 5px;
+  padding: .75rem;
+  width: 100%;
+  max-width: 10rem;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+form label.second {
+  padding: .75rem;
+}
+
+form input.submitButton {
+  width: 100%;
+  max-width: 20em;
+  display: block;
+  border: none;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto; 
+  padding: .70rem 1.3rem;
+  margin-bottom: 1.8rem;
+}
+
+form label.first, form div {
+  display: block;
+  padding-top: 1.5em;
+  font-size: 1em;
+  font-weight: bold;
+  top: 5px;
+  left: 4px;
+}
+
+form label.third {
+  display: block;
+  padding-top: 1.5em;
+  position: relative;
+}
+
+.comment {
+  height: 200px;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+form label.first input:required {
+  border-left: red solid 6px;
+}
+
+form label.first input:required:valid {
+  border-left: lightgreen solid 6px;
+}
+
+form fieldset{
+  border: 1px solid #1356D4;
+}
+
+form legend{
+  color: #1356D4;
+}
+
+form label.first input, form label.first select {
+  border: solid 1px #999;
+  color: #555;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+form input.submitButton {
+  background-color: #0A3282;
+  color: white;
 }
 
 footer{
