--- a/scoots/css/medium.css
+++ b/scoots/css/medium.css
@@ -138,14 +138,34 @@
     font-size: 30px;
   }
 
-.rental{
+  .rental{
     display: grid;
     grid-template-columns: 1fr 1fr;
-}
+  }
 
   .contacts{
     grid-column: 2;
     grid-row: 1;
+  }
+
+  .toursPlace {
+    display: block;
+    padding: 30px;
+    margin-bottom: 30px;
+  }
+
+  .toursRightPic {
+    max-width: 450px;
+    margin-bottom: 5px;
+    margin-left: 20px;
+    float: right;
+}
+
+  .toursLeftPic{
+    max-width: 450px;
+    margin-bottom: 5px;
+    margin-left: 20px;
+    float: left;
   }
 
   footer{
