--- a/scoots/scoots/css/small.css
+++ b/scoots/scoots/css/small.css
@@ -1,7 +1,7 @@
 body {
 	padding: 0;
 	margin: 0;
-  font-family: "Cudea", "Geneva", sans-serif;
+  font-family: 'Merriweather', serif;
 }
 
 
@@ -134,15 +134,6 @@ nav{
   position: relative;
 }
 
-.summaryBox{
-  top: 15px;
-  left: 50px;
-  padding: 0 15px;
-  background-color: #ffaf17;
-  border: 3px solid #0A3282;
-  color: black;  
-}
-
 .heroBox h3{
   font-size: 13px;
 }
@@ -152,9 +143,43 @@ nav{
   line-height: 0.8;
 }
 
+.summaryBox{
+  margin: 5px 70px 5px 70px;
+  text-align: center;
+  background-color: #ffaf17;
+  border: 3px solid #000;
+  color: black;
+}
+
+
+
+div.forecast {
+  font-size: medium;
+  padding: 0;
+}
+
+.forecast section {
+display: flex;
+}
+
+.forecast p {
+  font-size: large;
+}
+
+#fiveDay{
+text-align: center;
+}
+
+.weather img{
+  max-width: 50%;
+}
+
 .forecast{
-  border: 3px solid #0A3282;
-  background-color: #7EA9FF;
+  margin: 5px 70px 5px 70px;
+  display: flex;
+  padding: 0 1rem 1rem;
+  border: 3px solid #000;
+  background-color: #20B2AA;
 }
 
 .forecast p {
@@ -164,17 +189,12 @@ nav{
   color: black;
 }
 
-#fiveDay{
-  display: none;
-}
-
 .forecastText{
   display: none;
 }
 
 .weather{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: block;
 }
 
 .contactsRow{
@@ -319,17 +339,16 @@ form input.submitButton {
 
 .text{
   -webkit-text-fill-color: #20B2AA;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
+  -webkit-text-stroke-width: 0.5px;
   padding: 10px;
   font-family: 'Ranchers', cursive;
-  font-size: 35px;
+  font-size: 20px;
   text-align: center;
+  letter-spacing: 1.5px;
 }
 
 .text a {
   -webkit-text-fill-color: #20B2AA;
-  -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
 }
 
@@ -339,8 +358,12 @@ form input.submitButton {
   -webkit-text-stroke-color: black;
 }
 
-.rentalInfo a{
-  text-decoration: none;
+.rentalInfo{
+  padding-left: 20px;
+}
+
+.rentalInfo p{
+  text-align: center;
 }
 
 .rentalInfo a:visited{
