--- a/scoots/css/medium.css
+++ b/scoots/css/medium.css
@@ -17,6 +17,7 @@
   .text{
     font-size: 35px;
     letter-spacing: 0.5px;
+    line-height: 40px;
   }
 
   .summaryBox{
@@ -52,7 +53,6 @@
   .navigation li:hover {
     background-color: #C78111;
     color: #000000;
-    border: 1px solid #000000;
     box-shadow: 5px 5px 5px black;
   }
   
@@ -75,11 +75,6 @@
     font-size: 25px;
   }
 
-  div.forecast {
-    font-size: medium;
-    padding: 0;
-}
-
 .forecast section {
   display: flex;
 }
@@ -96,12 +91,6 @@
   display: block;
   text-align: center;
   max-width: 414px;
-}
-.forecast{
-  max-height: 100px;
-  display: block;
-  padding: 0 1rem 1rem;
-  margin: 5px;
 }
 
   .heroBox h3{
@@ -123,6 +112,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding: 0 1rem 1rem;
+    max-height: 100px;
+  padding: 0 1rem 1rem;
+  margin: 5px 5px 5px 0;
   }
   
   #daysSection{
