--- a/scoots/css/medium.css
+++ b/scoots/css/medium.css
@@ -16,10 +16,13 @@
 
   .text{
     font-size: 35px;
-    letter-spacing: 0.5px;
     line-height: 40px;
   }
 
+  .textRentalPage{
+    font-size: 35px;
+    line-height: 40px;
+  }
   .summaryBox{
     padding: 0;
     margin: 5px 0;
@@ -153,8 +156,8 @@
   }
 
   .contacts{
-    grid-column: 2;
-    grid-row: 1;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 
   .toursPlace {
