--- a/scoots/css/small.css
+++ b/scoots/css/small.css
@@ -105,7 +105,7 @@ nav{
 
 .rental section{
   border: solid 2px;
-  background-color: blue;
+  background-color: #20B2AA;
 }
 
 .rental section:hover {
@@ -203,12 +203,19 @@ text-align: center;
   margin-bottom: 30px;
 }
 
+.contactsContainer{
+  background: #364657;
+}
+
+.contactsContainer .text{
+  margin: 0;
+}
+
 .contacts{
   grid-column: 1 / 3;
   grid-row: 1;
   padding: 25px;
   text-align: center;
-  background: #364657;
 }
 
 .contacts p{
@@ -347,13 +354,29 @@ form input.submitButton {
   -webkit-text-stroke-width: 0.5px;
   padding: 10px;
   font-family: 'Ranchers', cursive;
-  font-size: 20px;
+  font-size: 23px;
   text-align: center;
   letter-spacing: 1.5px;
 }
 
 .text a {
   -webkit-text-fill-color: #20B2AA;
+  -webkit-text-stroke-color: black;
+  
+}
+
+.textRentalPage{
+  -webkit-text-fill-color: #ffaf17;
+  -webkit-text-stroke-width: 0.5px;
+  padding: 10px;
+  font-family: 'Ranchers', cursive;
+  font-size: 23px;
+  text-align: center;
+  letter-spacing: 1.5px;
+}
+
+.textRentalPage a {
+  -webkit-text-fill-color: #ffaf17;
   -webkit-text-stroke-color: black;
   
 }
@@ -382,6 +405,10 @@ form input.submitButton {
 
 .rentalInfo a:hover{
   color: red;
+}
+
+.socialIcons{
+  text-align: center;
 }
 
 footer{
