--- a/scoots/css/small.css
+++ b/scoots/css/small.css
@@ -212,8 +212,6 @@ text-align: center;
 }
 
 .contacts{
-  grid-column: 1 / 3;
-  grid-row: 1;
   padding: 25px;
 }
 
@@ -374,8 +372,10 @@ form input.submitButton {
 }
 
 #map {
-  height: 200px;  /* The height is 400 pixels */
-  width: 100%;  /* The width is the width of the web page */
+  grid-column: 1 / 3;
+  grid-row: 2;
+  height: 300px;
+  width: 100%;
  }
 
 .textRentalPage{
