--- a/scoots/css/small.css
+++ b/scoots/css/small.css
@@ -6,7 +6,7 @@ body {
 
 
 header {
-  -webkit-text-fill-color: white;
+  -webkit-text-fill-color: #ffaf17;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
 	padding: 10px;
